--- a/src/main/resources/messages/message_IT.properties
+++ b/src/main/resources/messages/message_IT.properties
@@ -1,3 +1,14 @@
+
+
+required.pizza.nome = Il nome e' un campo obbligatorio
+pizzaDuplicate = Questa pizza esiste gia'
+required.pizza.prezzo= Il prezzo e' un campo obbligatorio
+required.pizza.ingredientiBase = Aggiungere almeno un ingrediente
+
+required.ingrediente.nome = Il nome e' un campo obbligatorio
+duplicate.ingrediente.nome = Questo ingrediente esiste gia'
+
+
 required.user.nome=Il nome e' un campo obbligatorio
 required.user.cognome=Il cognome e' un campo obbligatorio
 required.user.indirizzo=L'indirizzo e' un campo obbligatorio
